# NAGS

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  README.md  SETUP_GUIDE.md  minimal_build.bat  nags_engine.py  overview.md  quick_start.bat  requirements.txt  train_now.bat
build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  NAGS_Minimal.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nags_minimal.vcxproj  nags_minimal.vcxproj.filters
build_minimal/nags_minimal.dir/Release/nags_minimal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_minimal/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_minimal/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
scripts/: run_with_arena.py  start_dual_training.py  start_nn_server.py  train_supervised.py
src/: main.cpp
src/core/: CMakeLists.txt  bitboard.h  board.cpp  board.h  engine.cpp  engine.h  evaluator.cpp  evaluator.h  search.cpp  search.h  search_options.h
src/gnn/: CMakeLists.txt  board_encoder.py  evaluator_model.py
src/mcts/: CMakeLists.txt  mcts.h
src/meta/: CMakeLists.txt  bayesian_bandit.cpp  bayesian_bandit.h  meta_learner.cpp  meta_learner.h  position_aware_scheduler.h
src/nn/: CMakeLists.txt  gnn_evaluator.cpp  gnn_evaluator.h
src/training/: CMakeLists.txt  curriculum_trainer.py  dual_training_pipeline.cpp  dual_training_pipeline.h  rl_trainer.cpp  rl_trainer.h  supervised_trainer.cpp  supervised_trainer.h  train_main.cpp
src/uci/: CMakeLists.txt  uci.cpp  uci.h
tests/: CMakeLists.txt
